fix: spacing

--- a/src/theme-src/css/nav.css
+++ b/src/theme-src/css/nav.css
@@ -30,6 +30,9 @@
   & .caption {
     @apply uppercase text-m font-medium tracking-wider font-mono text-gray-dark pt-10 pb-3;
   }
+  & p:first-of-type {
+    @apply pt-4;
+  }
   & .expand {
     height: 1.2rem;
     margin-left: -0.4rem;
